sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:14: error: Boolean does not take parameters
    else (getColor(k)==BLUE){
                            ^