sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var i=0
  while(isSorted()==false){
    getColor(i)
    var k = getSize()-1
    var j = i
    if (getColor(i)==RED){
      while (getColor(k)==RED && k>0){
        k=k-1
      }
      swap(i,k)
    }
    else (getColor(k)==BLUE){
      while (getColor(k)==BLUE && j<getSize()-1){
      j=j+1
    }
    swap (i,k)
    }
    i=i+1
  }
}